templates/todo/mongodb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
  namespace: todo
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:3.4
        command: ['mongod', '--smallfiles', '--oplogSize', '128']

        volumeMounts:
        - mountPath: /data/db
          name: data

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mongodb
