templates/todo/wekan-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: wekan
  namespace: todo
spec:
  ports:
    - name: www
      port: 80
      protocol: TCP
  selector:
    app: wekan
